# openinstruct

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
openinstruct/: __init__.py  client.py  context.py  extraction.py  prompts.py  retry.py  schema.py  types.py
openinstruct/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py
tests_openinstruct/: __init__.py  test_client.py  test_comprehensive.py  test_fallback.py  test_providers.py  test_real_api.py  test_usage.py
